starting to work on login

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,7 +3,7 @@ copy.src.on.open=false
 copy.src.target=
 index.file=index.php
 remote.connection=bergul.xf.cz-5b8c0b
-remote.directory=
-remote.upload=ON_RUN
+remote.directory=/php
+remote.upload=ON_SAVE
 run.as=REMOTE
 url=http://bergul.xf.cz/php/
